# bevy_mops

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: cubes.rs  test.rs
src/: boolean.rs  error.rs  gimesh.rs  lib.rs  merge.rs  seperate.rs  slice.rs  vertex.rs
src/gimesh/: conversion.rs  mod.rs  ops.rs
