[package]
name = "bevy_mops"
version = "0.1.1"
edition = "2021"
authors = ["PixelDoted"]
documentation = "https://docs.rs/bevy_mops"
description = "Mesh Operations library for bevy"
repository = "https://github.com/PixelDoted/bevy_mops"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "3d"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_render"] }

[dev-dependencies]
bevy = "0.13"
bevy_panorbit_camera = "0.17.0"

[[example]]
name = "cubes"
